updated model to run resubmission experiments

--- a/data/scripts/sciplex/build_sciplex_data.ipynb
+++ b/data/scripts/sciplex/build_sciplex_data.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "############################\n",
     "#Loads diseased, and treated data\n",
-    "obs_and_int = ad.read_h5ad('../../raw/sciplex/data/SrivatsanTrapnell2020_sciplex3.h5ad')\n",
+    "obs_and_int = ad.read_h5ad('../../processed/sciplex/data/SrivatsanTrapnell2020_sciplex3_preprocessed_{}.h5ad'.format(cell_line))\n",
     "obs_and_int = obs_and_int[~obs_and_int.obs.cell_line.isna()]\n",
     "# cell_line = 'K562', 'A549', 'MCF7'\n",
     "\n",
