--- a/figures/figures_supplementary/ablation_loss_function/plot_ablation_loss.ipynb
+++ b/figures/figures_supplementary/ablation_loss_function/plot_ablation_loss.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "'''\n",
     "Here, we plot PDGrapher performance as a function of the loss function components\n",
+    "Chemical dataset, random splitting\n",
     "'''\n",
-    "##Here we have code to replicate figures included in Figure 3 of main paper\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
