updated fig styles and added source data generation

--- a/figures/figure_4_chemical_newcell/plot_figure_4_pert_pred_performance.ipynb
+++ b/figures/figure_4_chemical_newcell/plot_figure_4_pert_pred_performance.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gonzag46/scratch/conda/envs/pdgrapher/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "##Here we have code to replicate figures included in Figure 3 of main paper\n",
     "import pandas as pd\n",
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "##########\n",
     "#Mechanistic baselines \n",
     "##########\n",
+    "\n",
+    "#############Recompute with new mechanistic results \n",
+    "\n",
     "# Initialize an empty dictionary\n",
     "performance = {}\n",
     "selector = {'cancer_genes': 'Cancer genes',\n",
@@ -90,31 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "##########\n",
     "#Biolord\n",
     "##########\n",
-    "\n",
     "paths = glob(osp.join(base_path, 'v2/Biolord/chemical/cross/biolord_chemical_*.csv'))\n",
     "\n",
     "for path in paths:\n",
     "    df = pd.read_csv(path)\n",
-    "    \n",
-    "            \n",
-    "    if df.iloc[0]['cellline1'] == 'HA1E':\n",
-    "        continue\n",
-    "    \n",
-    "    train_cell = df.iloc[0]['cellline1']\n",
-    "        \n",
     "    # Process the new DataFrame to update the dictionary\n",
     "    method_name = 'Biolord'\n",
     "\n",
     "    # List the columns for which you want to compute the mean\n",
     "    columns_of_interest = ['recall_at_1', 'recall_at_10', 'recall_at_100', \n",
-    "                        'recall_at_1000', 'rankings', 'perc_partially_accurate_predictions', 'Ranking_DCG']\n",
+    "                        'recall_at_1000', 'rankings', 'perc_partially_accurate_predictions', 'Ranking_DCG' ]\n",
     "\n",
     "    # Group by 'cellline2' and calculate the mean for the specified columns\n",
     "    df_grouped = df.groupby('cellline2')[columns_of_interest].mean().reset_index()\n",
@@ -122,9 +126,6 @@
     "    # Iterate over the rows of the new DataFrame\n",
     "    for _, row in df_grouped.iterrows():\n",
     "        cellline = row['cellline2']\n",
-    "\n",
-    "        if cellline == train_cell:\n",
-    "            continue\n",
     "        \n",
     "        metric_data = {\n",
     "            'recall@1': row['recall_at_1'],\n",
@@ -134,6 +135,7 @@
     "            'percentage of samples with partially accurate predictions': row['perc_partially_accurate_predictions'],\n",
     "            'rankings': row['rankings'],\n",
     "            'nDCG': row['Ranking_DCG']\n",
+    "            \n",
     "        }\n",
     "        \n",
     "        # Initialize nested dictionaries if not already present\n",
@@ -145,12 +147,12 @@
     "                performance[cellline][metric] = {}\n",
     "            if method_name not in performance[cellline][metric]:\n",
     "                performance[cellline][metric][method_name] = []\n",
-    "            performance[cellline][metric][method_name].append(value)\n"
+    "            performance[cellline][metric][method_name].append(value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +203,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cellline2</th>\n",
+       "      <th>recall_at_1</th>\n",
+       "      <th>recall_at_10</th>\n",
+       "      <th>recall_at_100</th>\n",
+       "      <th>recall_at_1000</th>\n",
+       "      <th>rankings</th>\n",
+       "      <th>perc_partially_accurate_predictions</th>\n",
+       "      <th>Ranking_DCG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MDAMB231</td>\n",
+       "      <td>0.006552</td>\n",
+       "      <td>0.019561</td>\n",
+       "      <td>0.13742</td>\n",
+       "      <td>0.998355</td>\n",
+       "      <td>0.506636</td>\n",
+       "      <td>2.471483</td>\n",
+       "      <td>0.107553</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  cellline2  recall_at_1  recall_at_10  recall_at_100  recall_at_1000  \\\n",
+       "0  MDAMB231     0.006552      0.019561        0.13742        0.998355   \n",
+       "\n",
+       "   rankings  perc_partially_accurate_predictions  Ranking_DCG  \n",
+       "0  0.506636                             2.471483     0.107553  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_grouped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,22 +489,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['Cancer genes', 'Cancer targets', 'Random', 'Perturbed genes', 'Biolord', 'CellOT', 'ChemCPA', 'scGen', 'PDGrapher'])"
+       "[0.7217263065020008,\n",
+       " 0.7194971792455771,\n",
+       " 0.7143493803451079,\n",
+       " 0.7103512216875616,\n",
+       " 0.7221725443372726,\n",
+       " 0.7209426810233837,\n",
+       " 0.7172926991251225,\n",
+       " 0.5012390220745312]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "performance['HT29']['rankings'].keys()"
+    "performance['HT29']['rankings']['Biolord']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Only include the metrics of interest\n",
+    "metrics_to_include = [\n",
+    "    (\"percentage of samples with partially accurate predictions\", \"Accurately predicted samples (%)\", \"Panel A\"),\n",
+    "    (\"nDCG\", \"nDCG\", 'Panel B')\n",
+    "]\n",
+    "\n",
+    "# Prepare data for each sheet\n",
+    "sheets = {}\n",
+    "\n",
+    "for item in metrics_to_include:\n",
+    "    metric, metric_name, panel = item[0], item[1], item[2]\n",
+    "    records = []\n",
+    "    for cell_line in performance:\n",
+    "        if metric not in performance[cell_line]:\n",
+    "            continue\n",
+    "        for model in performance[cell_line][metric]:\n",
+    "            values = performance[cell_line][metric][model]\n",
+    "            for split_index, value in enumerate(values, start=1):\n",
+    "                records.append({\n",
+    "                    \"Cell line\": cell_line,\n",
+    "                    \"Model\": model,\n",
+    "                    \"Cross-validation split\": split_index,\n",
+    "                    metric_name: value\n",
+    "                })\n",
+    "    sheets[panel] = pd.DataFrame(records)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Prepare the recall sheet\n",
+    "recall_metrics = [\"recall@1\", \"recall@10\", \"recall@100\"]\n",
+    "recall_records = []\n",
+    "\n",
+    "for cell_line in performance:\n",
+    "    # Check if all recall metrics are present\n",
+    "    if not all(rm in performance[cell_line] for rm in recall_metrics):\n",
+    "        continue\n",
+    "\n",
+    "    models = set()\n",
+    "    for rm in recall_metrics:\n",
+    "        models.update(performance[cell_line][rm].keys())\n",
+    "\n",
+    "    for model in models:\n",
+    "        for split_index in range(5):\n",
+    "            row = {\n",
+    "                \"Cell line\": cell_line,\n",
+    "                \"Model\": model,\n",
+    "                \"Cross-validation split\": split_index + 1\n",
+    "            }\n",
+    "            for rm in recall_metrics:\n",
+    "                val_list = performance[cell_line][rm].get(model, [None]*5)\n",
+    "                row[rm] = val_list[split_index] if split_index < len(val_list) else None\n",
+    "            recall_records.append(row)\n",
+    "\n",
+    "\n",
+    "\n",
+    "sheets[\"panel C\"] = pd.DataFrame(recall_records)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Save to Excel\n",
+    "with pd.ExcelWriter(osp.join(outdir, \"PDGrapher_SourceData_Fig4.xlsx\")) as writer:\n",
+    "    for panel, df in sheets.items():\n",
+    "        df.to_excel(writer, sheet_name=panel, index=False)"
    ]
   },
   {
@@ -1232,6 +1387,38 @@
     "    plt.savefig(osp.join(outdir, 'panel_all_metrics_ranking.pdf'))\n",
     "    plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Append ranking values to Excel file of source dat\n",
+    "\n",
+    "df = pd.read_csv(osp.join(base_path, 'v2/rank_table_chemical_cross_v2_full.csv'))\n",
+    "# Rename the methods in the 'Methods' column\n",
+    "df['Methods'] = df['Methods'].replace({\n",
+    "    'BL Rand Cancer Genes': 'Cancer genes',\n",
+    "    'BL Rand Cancer Target': 'Cancer targets',\n",
+    "    'BL Rand Random': 'Random',\n",
+    "    'BL Rand Pert Genes': 'Perturbed genes',\n",
+    "    'chemCPA': 'ChemCPA',\n",
+    "    'PDgrapher': 'PDGrapher',\n",
+    "    'scGEN': 'scGen'\n",
+    "})\n",
+    "\n",
+    "df['Cross-validation split'] = df.groupby(['Methods', 'Cellline']).cumcount() + 1\n",
+    "df = df.sort_values(by=['Methods', 'Cellline', 'Cross-validation split'])\n",
+    "df.rename(columns={'Methods': 'Model', 'Cellline': 'Cell line', 'rank':'Rank'}, inplace=True)\n",
+    "\n",
+    "df = df[['Cell line', 'Model', 'Cross-validation split', 'Rank']]\n",
+    "df[df['Model'] == 'Biolord']\n",
+    "\n",
+    "# Load the existing Excel file and append a new sheet\n",
+    "with pd.ExcelWriter(osp.join(outdir, \"PDGrapher_SourceData_Fig4.xlsx\"), mode='a', engine='openpyxl') as writer:\n",
+    "    df.to_excel(writer, sheet_name=\"Panel D\", index=False)"
    ]
   },
   {
