--- a/notebooks/train_chemical.ipynb
+++ b/notebooks/train_chemical.ipynb
@@ -73,18 +73,19 @@
    "outputs": [],
    "source": [
     "for n_layers_gnn in [1, 2, 3]:\n",
-    "    outdir_i = osp.join(outdir, 'n_gnn_{}_n_nn_{}_usef_{}_useb_{}_usecycle_{}_usesup_{}_split_random___{}_{}_{}___{}_{}_{}'.format(n_layers_gnn,\n",
-    "                                                                                                                                    n_layers_nn,\n",
-    "                                                                                                                                    use_forward_data,\n",
-    "                                                                                                                                    use_backward_data,\n",
-    "                                                                                                                                    use_intervention_data,\n",
-    "                                                                                                                                    use_supervision,\n",
-    "                                                                                                                                    current_date.year, \n",
-    "                                                                                                                                    current_date.month, \n",
-    "                                                                                                                                    current_date.day, \n",
-    "                                                                                                                                    current_date.hour, \n",
-    "                                                                                                                                    current_date.minute, \n",
-    "                                                                                                                                    current_date.second))\n",
+    "    outdir_i = osp.join(outdir, 'n_gnn_{}_n_nn_{}_usef_{}_useb_{}_usecycle_{}_usesup_{}_split_random___{}_{}_{}___{}_{}_{}'.format(\n",
+    "        n_layers_gnn,\n",
+    "        n_layers_nn,\n",
+    "        use_forward_data,\n",
+    "        use_backward_data,\n",
+    "        use_intervention_data,\n",
+    "        use_supervision,\n",
+    "        current_date.year, \n",
+    "        current_date.month, \n",
+    "        current_date.day, \n",
+    "        current_date.hour, \n",
+    "        current_date.minute, \n",
+    "        current_date.second))\n",
     "    os.makedirs(outdir_i, exist_ok = False)\n",
     "    dataset = Dataset(\n",
     "            forward_path=f\"../data/processed/torch_data/chemical/real_lognorm/data_forward_{cell_line}.pt\",\n",
