--- a/notebooks/test_PDG.ipynb
+++ b/notebooks/test_PDG.ipynb
@@ -207,6 +207,7 @@
     "            rankings = []\n",
     "            n_non_zeros = 0\n",
     "\n",
+    "            ####ON TEST SET\n",
     "            for data in test_loader_backward:\n",
     "                pred_backward_m2 = model.perturbation_discovery(torch.concat([data.diseased.view(-1, 1).to(device), data.treated.view(-1, 1).to(device)], 1), data.batch.to(device), mutilate_mutations=data.mutations.to(device), threshold_input=thresholds)\n",
     "                out = pred_backward_m2\n",
@@ -237,7 +238,7 @@
     "            all_perc_partially_accurate_predictions['test'].append(100 * n_non_zeros/len(test_loader_backward))\n",
     "            print('fold {}/5'.format(fold))\n",
     "\n",
-    "            ####VALIDATION SET\n",
+    "            ####ON VALIDATION SET\n",
     "            recall_at_1 = []\n",
     "            recall_at_10 = []\n",
     "            recall_at_100 = []\n",
