--- a/notebooks/train_genetic.ipynb
+++ b/notebooks/train_genetic.ipynb
@@ -5,7 +5,7 @@
    "id": "4d2b79af",
    "metadata": {},
    "source": [
-    "The script to train PDGrapher on processed chemical perturbation data"
+    "The script to train PDGrapher on processed genetic perturbation data"
    ]
   },
   {
